--- a/index.html
+++ b/index.html
@@ -34,19 +34,29 @@
             interest in data analytics and visualisation
             </div>
         </div>
-        <div class="drop-button page-link">See my work
-            <i class="arrow fa fa-arrow-right"></i>
-        </div>
+        <a href="#about">
+            <div class="drop-button page-link">See my work
+                <i class="arrow fa fa-arrow-right"></i>
+            </div>
+        </a>
     </div>
 </section>
 <!--NAVBAR-->
 <section id="navbar">
     <nav class="container">
         <ul class="navigation">
-            <li class="nav-home">home</li>
-            <li class="nav-about">about</li>
-            <li class="nav-portfolio">portfolio</li>
-            <li class="nav-contact">contact</li>
+            <li class="nav-home">
+                <a href="#home">home</a>
+            </li>
+            <li class="nav-about">
+                <a href="#about">about</a>
+            </li>
+            <li class="nav-portfolio">
+                <a href="#portfolio">portfolio</a>
+            </li>
+            <li class="nav-contact">
+                <a href="#contact">contact</a>
+            </li>
         </ul>
         <div class="menu-dropdown lg-hidden sm-visible">
             <i class="fa fa-bars"></i>
