--- a/index.html
+++ b/index.html
@@ -204,18 +204,6 @@
         </div>
         <div class="wrap lg-col-3">
             <div class="card">
-                <div class="front project-three"></div>
-                <div class="back">
-                    <div class="project-title bold">PilotShop</div>
-                    <div class="project-technologies highlight-raspberry">HTML / CSS / JSON</div>
-                    <a href="https://dev.maydenacademy.co.uk/students/2018/ailin/pilotshop-V2/" target="_blank">
-                        <div class="project-button">See Project</div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="wrap lg-col-3">
-            <div class="card">
                 <div class="front project-four"></div>
                 <div class="back">
                     <div class="project-title bold">Content Management System</div>
@@ -240,11 +228,23 @@
         </div>
         <div class="wrap lg-col-3">
             <div class="card">
+                <div class="front project-three"></div>
+                <div class="back">
+                    <div class="project-title bold">PilotShop</div>
+                    <div class="project-technologies highlight-raspberry">HTML / CSS / JSON</div>
+                    <a href="https://dev.maydenacademy.co.uk/students/2018/ailin/pilotshop-V2/" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3">
+            <div class="card">
                 <div class="front project-six"></div>
                 <div class="back">
-                    <div class="project-title bold">New Project</div>
-                    <div class="project-technologies highlight-raspberry"></div>
-                    <a href="#" target="_blank">
+                    <div class="project-title bold">E-commerce Store</div>
+                    <div class="project-technologies highlight-raspberry">PHP / MySQL</div>
+                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/totallyPawsome/" target="_blank">
                         <div class="project-button">See Project</div>
                     </a>
                 </div>
