hamburger menu removed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Caitlin Doyle | Web Developer</title>
+    <title>Ailin Doyle | Web Developer</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
@@ -27,7 +27,7 @@
     <canvas id="canvas"></canvas>
     <div class="home-text container">
         <div class="home-banner">
-            <div class="name highlight-mint">Caitlin Doyle</div>
+            <div class="name highlight-mint">Ailin Doyle</div>
             <div class="tagline">
             Full-stack web developer with an
             <br>
@@ -58,9 +58,6 @@
                 <a href="#contact">contact</a>
             </li>
         </ul>
-        <div class="menu-dropdown lg-hidden sm-visible">
-            <i class="fa fa-bars"></i>
-        </div>
     </nav>
 </section>
 <!--ABOUT-->
@@ -70,7 +67,7 @@
     </div>
     <div class="container">
         <div class="key-interests">
-            <div class="key-skill skill-three lg-col-4 sm-col-2">
+            <div class="key-skill skill-three lg-col-4 tb-col-2 sm-col-1">
                 <div class="about-icon">
                     <i class="fa fa-desktop"></i>
                 </div>
@@ -79,7 +76,7 @@
                     <p class="key-summary">Adept at both front- and back-end technologies</p>
                 </div>
             </div>
-            <div class="key-skill skill-one lg-col-4 sm-col-2">
+            <div class="key-skill skill-one lg-col-4 tb-col-2 sm-col-1">
                 <div class="about-icon">
                     <i class="fa fa-database"></i>
                 </div>
@@ -88,7 +85,7 @@
                     <p class="key-summary">Skilled at analysing data to discover patterns</p>
                 </div>
             </div>
-            <div class="key-skill skill-two lg-col-4 sm-col-2">
+            <div class="key-skill skill-two lg-col-4 tb-col-2 sm-col-1">
                 <div class="about-icon">
                     <i class="fa fa-chart-pie"></i>
                 </div>
@@ -97,7 +94,7 @@
                     <p class="key-summary">Passionate about making data interesting</p>
                 </div>
             </div>
-            <div class="key-skill skill-four lg-col-4 sm-col-2">
+            <div class="key-skill skill-four lg-col-4 tb-col-2 sm-col-1">
                 <div class="about-icon">
                     <i class="fa fa-cogs"></i>
                 </div>
@@ -120,52 +117,52 @@
         </div>
         <div class="skills lg-col-2 sm-col-1">
             <div class="bar">
-                <div class="fill" style="width: 60%">
+                <div class="fill" style="width: 80%">
                     <div class="tag">HTML / CSS</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 40%">
+                <div class="fill" style="width: 70%">
                     <div class="tag">JavaScript</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 30%">
+                <div class="fill" style="width: 45%">
                     <div class="tag">Node.js</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 30%">
+                <div class="fill" style="width: 45%">
                     <div class="tag">React</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 55%">
+                <div class="fill" style="width: 65%">
                     <div class="tag">PHP</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 60%">
+                <div class="fill" style="width: 75%">
                     <div class="tag">MySQL</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 30%">
+                <div class="fill" style="width: 45%">
                     <div class="tag">MongoDb</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 60%">
+                <div class="fill" style="width: 80%">
                     <div class="tag">Tableau</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 65%">
+                <div class="fill" style="width: 80%">
                     <div class="tag">R</div>
                 </div>
             </div>
             <div class="bar">
-                <div class="fill" style="width: 60%">
+                <div class="fill" style="width: 70%">
                     <div class="tag">Scrum / Agile</div>
                 </div>
             </div>
@@ -178,7 +175,7 @@
         <h2>PROJECTS</h2>
     </div>
     <div class="projects container">
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-one"></div>
                 <div class="back">
@@ -190,7 +187,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-two"></div>
                 <div class="back">
@@ -202,7 +199,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-four"></div>
                 <div class="back">
@@ -214,7 +211,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-five"></div>
                 <div class="back">
@@ -226,7 +223,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-three"></div>
                 <div class="back">
@@ -238,7 +235,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrap lg-col-3">
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
                 <div class="front project-six"></div>
                 <div class="back">
@@ -271,22 +268,22 @@
 <section id="footer" class="section-margins">
     <div class="social-media container">
         <div class="footer-icon media">
-            <a href="#https://www.linkedin.com/in/ailin-doyle-304abbb0/" target="_blank">
+            <a href="https://www.linkedin.com/in/ailin-doyle-304abbb0/" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="#https://twitter.com/ailinrdoyle" target="_blank">
+            <a href="https://twitter.com/ailinrdoyle" target="_blank">
                 <i class="fab fa-twitter"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="#https://github.com/ailindoyle" target="_blank">
+            <a href="https://github.com/ailindoyle" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
         </div>
         <div class="footer-icon media">
-            <a href="#https://codepen.io/ailindoyle/" target="_blank">
+            <a href="https://codepen.io/ailindoyle/" target="_blank">
                 <i class="fab fa-codepen"></i>
             </a>
         </div>
