file paths changed to match project structure refactor

--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@
         <p class="highlight-mint">Have a question or want to hire me?</p>
     </div>
     <div class="contact-form container">
-        <form id="email-form" action="php/send-email.php" method="post">
+        <form id="email-form" action="../src/send-email.php" method="post">
             <input class="form-element" placeholder="Name" type="text" name="name" id="name" required>
             <input class="form-element" placeholder="Email" type="text" name="email" id="email" required>
             <textarea class="form-element" placeholder="Your Message" type="text" name="message" id="message" required></textarea>
