file paths corrected and email address added to footer

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ailin Doyle | Web Developer</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
@@ -291,7 +293,8 @@
         </div>
     </div>
     <div class="copyright container">
-        <p>CAITLIN DOYLE &copy2018</p>
+        <p>ailin.doyle@yahoo.com</p>
+        <p>AILIN DOYLE &copy2018</p>
     </div>
 </section>
 </body>
