favicon added, some responsiveness fixed, profile picture added

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ailin Doyle | Web Developer</title>
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,500">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
@@ -112,7 +114,7 @@
     <div class="container main-skills">
         <div class="info lg-col-2 sm-col-1">
             <div class="picture">
-                <img src="images/temp_picture.jpg" alt="Me">
+                <img src="images/profile_picture.jpg" alt="Me">
             </div>
             <div>
                 <p class="description">My name is Caitlin and I am a full-stack web developer in training. I am currently a student at Mayden Academy, based in Bath. </p>
