new projects added to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                 <img src="images/profile_picture.jpg" alt="Me">
             </div>
             <div>
-                <p class="description">My name is Caitlin and I am a full-stack web developer in training. I am currently a student at Mayden Academy, based in Bath. </p>
+                <p class="description">My name is Ailin and I am a full-stack web developer in training. I am currently a student at Mayden Academy, based in Bath. </p>
                 <p class="description">In addition to my new web development skills I am really interested in data analytics and data visualisation.</p>
             </div>
         </div>
@@ -183,10 +183,34 @@
     <div class="projects container">
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-one"></div>
+                <div class="front task-api"></div>
+                <div class="back">
+                    <div class="project-title bold">To Do API</div>
+                    <div class="project-technologies highlight-raspberry">JS RESTful API</div>
+                    <a href="https://github.com/Mayden-Academy/AcademyPortal" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front academy-portal"></div>
+                <div class="back">
+                    <div class="project-title bold">Academy Portal</div>
+                    <div class="project-technologies highlight-raspberry">Slim / PHP API / JS</div>
+                    <a href="https://github.com/Mayden-Academy/AcademyPortal" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front solar-system"></div>
                 <div class="back">
                     <div class="project-title bold">Solar System</div>
-                    <div class="project-technologies highlight-raspberry">HTML / CSS</div>
+                    <div class="project-technologies highlight-raspberry">SVG / CSS Animation</div>
                     <a href="https://dev.maydenacademy.co.uk/students/2018/ailin/solar-system/" target="_blank">
                         <div class="project-button">See Project</div>
                     </a>
@@ -195,7 +219,7 @@
         </div>
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-two"></div>
+                <div class="front javascript-game"></div>
                 <div class="back">
                     <div class="project-title bold">JavaScript Game</div>
                     <div class="project-technologies highlight-raspberry">JavaScript / JQuery</div>
@@ -207,11 +231,11 @@
         </div>
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-four"></div>
+                <div class="front timeline"></div>
                 <div class="back">
-                    <div class="project-title bold">Content Management System</div>
-                    <div class="project-technologies highlight-raspberry">PHP / MySQL</div>
-                    <a href="https://github.com/ailindoyle/Portfolio" target="_blank">
+                    <div class="project-title bold">WIP Timeline</div>
+                    <div class="project-technologies highlight-raspberry">CSS / JavaScript</div>
+                    <a href="https://github.com/ailindoyle/timeline-of-work/" target="_blank">
                         <div class="project-button">See Project</div>
                     </a>
                 </div>
@@ -219,10 +243,34 @@
         </div>
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-five"></div>
+                <div class="front ecommerce-store"></div>
+                <div class="back">
+                    <div class="project-title bold">E-commerce Store</div>
+                    <div class="project-technologies highlight-raspberry">PHP / MySQL</div>
+                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/totallyPawsome/" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front earth"></div>
+                <div class="back">
+                    <div class="project-title bold">Earth Animation</div>
+                    <div class="project-technologies highlight-raspberry">CSS / JavaScript</div>
+                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/ailin/earth/" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front aptitude-test"></div>
                 <div class="back">
                     <div class="project-title bold">Aptitude Test</div>
-                    <div class="project-technologies highlight-raspberry">JavaScript</div>
+                    <div class="project-technologies highlight-raspberry">ES6 JavaScript</div>
                     <a href="https://github.com/Mayden-Academy/aptitude-test" target="_blank">
                         <div class="project-button">See Project</div>
                     </a>
@@ -231,7 +279,7 @@
         </div>
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-three"></div>
+                <div class="front pilotshop"></div>
                 <div class="back">
                     <div class="project-title bold">PilotShop</div>
                     <div class="project-technologies highlight-raspberry">HTML / CSS / JSON</div>
@@ -243,11 +291,35 @@
         </div>
         <div class="wrap lg-col-3 tb-col-2 sm-col-1">
             <div class="card">
-                <div class="front project-six"></div>
+                <div class="front portfolio-cms"></div>
                 <div class="back">
-                    <div class="project-title bold">E-commerce Store</div>
+                    <div class="project-title bold">Content Management System</div>
                     <div class="project-technologies highlight-raspberry">PHP / MySQL</div>
-                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/totallyPawsome/" target="_blank">
+                    <a href="https://github.com/ailindoyle/Portfolio" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front bootstrap-demo"></div>
+                <div class="back">
+                    <div class="project-title bold">Bootstrap Demo</div>
+                    <div class="project-technologies highlight-raspberry">CSS Bootstrap</div>
+                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/ailin/bootstrap-demo/" target="_blank">
+                        <div class="project-button">See Project</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="wrap lg-col-3 tb-col-2 sm-col-1">
+            <div class="card">
+                <div class="front particles"></div>
+                <div class="back">
+                    <div class="project-title bold">Particles</div>
+                    <div class="project-technologies highlight-raspberry">JavaScript</div>
+                    <a href="https://dev.maydenacademy.co.uk/projects/2018Feb/ailin/particles-animation/" target="_blank">
                         <div class="project-button">See Project</div>
                     </a>
                 </div>
